# xor-app

./: .gitignore  CMakeLists.txt  README.md  application.cpp  application.h  main.cpp  resources.qrc
doc/: Architect.md  Cases.md  Entities.md
src/: application.cpp  application.h
src/controllers/: main_window_controller.cpp  main_window_controller.h
src/services/: file_processing_service.cpp  file_processing_service.h  file_search_service.cpp  file_search_service.h  ifile_processing_service.h  ifile_search_service.h  orchestrator.cpp  orchestrator.h
src/utils/: app_state.cpp  app_state.h  file_processor.cpp  file_processor.h  structures.h
style/: application.qss
